2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp.clang-tidy.loop-label.out.log
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2269:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2269:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2283:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2283:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2297:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high+1; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:2297:5: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:4253:7: warning: Added loop label VITIS_LOOP_1248_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1248_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:4253:7: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6674:2: warning: Added loop label VITIS_LOOP_30_1:   [xilinx-label-all-loops]
 for (int k = 0; k < 16; k++) {
 ^~~
 VITIS_LOOP_30_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6674:2: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6692:9: warning: Added loop label VITIS_LOOP_48_1:   [xilinx-label-all-loops]
        for (int k = 0; k < 16; k++) {
        ^~~
        VITIS_LOOP_48_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6692:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6724:2: warning: Added loop label VITIS_LOOP_80_1:   [xilinx-label-all-loops]
 for(int i=0; i<16; i++) {
 ^~~
 VITIS_LOOP_80_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6724:2: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6728:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=m_a op=mul impl=dsp latency=3
        ^
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6729:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=m_b op=mul impl=dsp latency=3
        ^
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6736:9: warning: Added loop label VITIS_LOOP_92_2:   [xilinx-label-all-loops]
        for(int i=0; i<32; i++) {
        ^~~
        VITIS_LOOP_92_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6736:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6757:2: warning: Added loop label VITIS_LOOP_113_1:   [xilinx-label-all-loops]
 for (int b = 0; b < ((1 << 16) / 256); b++) {
 ^~~
 VITIS_LOOP_113_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6757:2: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6759:9: warning: Added loop label VITIS_LOOP_115_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 256 / 32; i++) {
        ^~~
        VITIS_LOOP_115_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6759:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6764:13: warning: Added loop label VITIS_LOOP_120_3:   [xilinx-label-all-loops]
            for(int j=0; j<16; j++) {
            ^~~
            VITIS_LOOP_120_3: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6764:13: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6781:2: warning: Added loop label VITIS_LOOP_137_1:   [xilinx-label-all-loops]
 for (int b = 0; b < ((1 << 16) / 256); b++) {
 ^~~
 VITIS_LOOP_137_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6781:2: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6784:9: warning: Added loop label VITIS_LOOP_140_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 256 / 32; i++) {
        ^~~
        VITIS_LOOP_140_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6784:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6788:13: warning: Added loop label VITIS_LOOP_144_3:   [xilinx-label-all-loops]
            for (int j = 0; j < 16; j++) {
            ^~~
            VITIS_LOOP_144_3: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6788:13: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6792:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=pa op=mul impl=dsp latency=3
        ^
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6793:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=pb op=mul impl=dsp latency=3
        ^
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6806:2: warning: Added loop label VITIS_LOOP_162_1:   [xilinx-label-all-loops]
 for (int k = 0; k < (1 << 16) / 32; k++) {
 ^~~
 VITIS_LOOP_162_1: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6806:2: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6810:9: warning: Added loop label VITIS_LOOP_166_2:   [xilinx-label-all-loops]
        for (int i = 0; i < 16; i++) {
        ^~~
        VITIS_LOOP_166_2: 
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6810:9: note: FIX-IT applied suggested code changes
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6814:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=m_a op=mul impl=dsp latency=3
        ^
/nethome/asandeep6/FPGA_ECE8893/2026_Spring/lab3/project_1/hls/.autopilot/db/top.pp.0.cpp:6815:9: error: Invalid Directive: for current device, mul + dsp is invalid combination for bind_op [clang-diagnostic-error]
#pragma HLS bind_op variable=m_b op=mul impl=dsp latency=3
        ^
